Added new enums etc.

--- a/enum/sections/overview-en.html
+++ b/enum/sections/overview-en.html
@@ -11,10 +11,19 @@ This ontology has the following classes and properties.</span>
       <a href="#Activity" title="https://dev.qaecy.com/enum#Activity">Activity</a>
    </li>
    <li>
+      <a href="#Duration" title="https://dev.qaecy.com/enum#Duration">Activity Duration</a>
+   </li>
+   <li>
+      <a href="#Address" title="https://dev.qaecy.com/enum#Address">Address</a>
+   </li>
+   <li>
       <a href="#AWS" title="https://dev.qaecy.com/enum#AWS">Amazon Web Services</a>
    </li>
    <li>
       <a href="#ArchiveFileContent" title="https://dev.qaecy.com/enum#ArchiveFileContent">Archive File Content</a>
+   </li>
+   <li>
+      <a href="#AsBuiltDrawing" title="https://dev.qaecy.com/enum#AsBuiltDrawing">As-Built Drawing</a>
    </li>
    <li>
       <a href="#AudioFileContent" title="https://dev.qaecy.com/enum#AudioFileContent">Audio File Content</a>
@@ -47,9 +56,6 @@ This ontology has the following classes and properties.</span>
       <a href="#BuildingElement" title="https://dev.qaecy.com/enum#BuildingElement">Building Element</a>
    </li>
    <li>
-      <a href="#BuildingPermit" title="https://dev.qaecy.com/enum#BuildingPermit">Building Permit</a>
-   </li>
-   <li>
       <a href="#BuildingZone" title="https://dev.qaecy.com/enum#BuildingZone">Building Zone</a>
    </li>
    <li>
@@ -57,16 +63,46 @@ This ontology has the following classes and properties.</span>
          title="https://dev.qaecy.com/enum#BuildingStoreyInterface">Building/Storey Interface</a>
    </li>
    <li>
+      <a href="#BuiltAsset" title="https://dev.qaecy.com/enum#BuiltAsset">Built Asset</a>
+   </li>
+   <li>
       <a href="#CADFileContent" title="https://dev.qaecy.com/enum#CADFileContent">CAD File Content</a>
    </li>
    <li>
-      <a href="#ChangeOrder" title="https://dev.qaecy.com/enum#ChangeOrder">Change Order</a>
+      <a href="#City" title="https://dev.qaecy.com/enum#City">City</a>
    </li>
    <li>
       <a href="#Column" title="https://dev.qaecy.com/enum#Column">Column</a>
    </li>
    <li>
+      <a href="#ComplianceDocument" title="https://dev.qaecy.com/enum#ComplianceDocument">Compliance Document</a>
+   </li>
+   <li>
       <a href="#Contract" title="https://dev.qaecy.com/enum#Contract">Contract</a>
+   </li>
+   <li>
+      <a href="#ContractCondition" title="https://dev.qaecy.com/enum#ContractCondition">Contract Condition</a>
+   </li>
+   <li>
+      <a href="#ContractObligation" title="https://dev.qaecy.com/enum#ContractObligation">Contract Obligation</a>
+   </li>
+   <li>
+      <a href="#ContractRole" title="https://dev.qaecy.com/enum#ContractRole">Contract Role</a>
+   </li>
+   <li>
+      <a href="#ContractualDocument" title="https://dev.qaecy.com/enum#ContractualDocument">Contractual Document</a>
+   </li>
+   <li>
+      <a href="#CoordinationDrawing" title="https://dev.qaecy.com/enum#CoordinationDrawing">Coordination Drawing</a>
+   </li>
+   <li>
+      <a href="#Cost" title="https://dev.qaecy.com/enum#Cost">Cost</a>
+   </li>
+   <li>
+      <a href="#CostControlDocument" title="https://dev.qaecy.com/enum#CostControlDocument">Cost Control Document</a>
+   </li>
+   <li>
+      <a href="#Country" title="https://dev.qaecy.com/enum#Country">Country</a>
    </li>
    <li>
       <a href="#DataFileContent" title="https://dev.qaecy.com/enum#DataFileContent">Data File Content</a>
@@ -75,14 +111,50 @@ This ontology has the following classes and properties.</span>
       <a href="#Date" title="https://dev.qaecy.com/enum#Date">Date</a>
    </li>
    <li>
+      <a href="#DesignDocument" title="https://dev.qaecy.com/enum#DesignDocument">Design Document</a>
+   </li>
+   <li>
+      <a href="#DesignId" title="https://dev.qaecy.com/enum#DesignId">Design Id</a>
+   </li>
+   <li>
+      <a href="#DesignMetadata" title="https://dev.qaecy.com/enum#DesignMetadata">Design Metadata</a>
+   </li>
+   <li>
+      <a href="#DesignRevisionId" title="https://dev.qaecy.com/enum#DesignRevisionId">Design Revision Id</a>
+   </li>
+   <li>
+      <a href="#DesignScale" title="https://dev.qaecy.com/enum#DesignScale">Design Scale</a>
+   </li>
+   <li>
+      <a href="#DesignStatus" title="https://dev.qaecy.com/enum#DesignStatus">Design Status</a>
+   </li>
+   <li>
+      <a href="#DesignTitle" title="https://dev.qaecy.com/enum#DesignTitle">Design Title</a>
+   </li>
+   <li>
+      <a href="#DetailDrawing" title="https://dev.qaecy.com/enum#DetailDrawing">Detail Drawing</a>
+   </li>
+   <li>
+      <a href="#Discipline" title="https://dev.qaecy.com/enum#Discipline">Discipline</a>
+   </li>
+   <li>
       <a href="#Door" title="https://dev.qaecy.com/enum#Door">Door</a>
    </li>
    <li>
-      <a href="#Drawing" title="https://dev.qaecy.com/enum#Drawing">Drawing</a>
+      <a href="#DrawingEntity" title="https://dev.qaecy.com/enum#DrawingEntity">Drawing Entity</a>
+   </li>
+   <li>
+      <a href="#DrawingSheet" title="https://dev.qaecy.com/enum#DrawingSheet">Drawing Sheet</a>
+   </li>
+   <li>
+      <a href="#DuctLayoutDrawing" title="https://dev.qaecy.com/enum#DuctLayoutDrawing">Duct Layout Drawing</a>
    </li>
    <li>
       <a href="#ElementAdjacentElementInterface"
          title="https://dev.qaecy.com/enum#ElementAdjacentElementInterface">Element/Adjacent element Interface</a>
+   </li>
+   <li>
+      <a href="#ElevationDrawing" title="https://dev.qaecy.com/enum#ElevationDrawing">Elevation Drawing</a>
    </li>
    <li>
       <a href="#EmailAddress" title="https://dev.qaecy.com/enum#EmailAddress">Email Address</a>
@@ -97,10 +169,24 @@ This ontology has the following classes and properties.</span>
       <a href="#Facade" title="https://dev.qaecy.com/enum#Facade">Facade</a>
    </li>
    <li>
+      <a href="#FileReference" title="https://dev.qaecy.com/enum#FileReference">File Reference</a>
+   </li>
+   <li>
+      <a href="#FloorPlanDrawing" title="https://dev.qaecy.com/enum#FloorPlanDrawing">Floor Plan Drawing</a>
+   </li>
+   <li>
       <a href="#FontFileContent" title="https://dev.qaecy.com/enum#FontFileContent">Font File Content</a>
    </li>
    <li>
-      <a href="#GeospatialFileContent" title="https://dev.qaecy.com/enum#GeospatialFileContent">Geospatial File Content</a>
+      <a href="#FoundationPlanDrawing"
+         title="https://dev.qaecy.com/enum#FoundationPlanDrawing">Foundation Plan Drawing</a>
+   </li>
+   <li>
+      <a href="#GeoCoordinates" title="https://dev.qaecy.com/enum#GeoCoordinates">GeoCoordinates</a>
+   </li>
+   <li>
+      <a href="#GeospatialFileContent"
+         title="https://dev.qaecy.com/enum#GeospatialFileContent">Geospatial File Content</a>
    </li>
    <li>
       <a href="#GCP" title="https://dev.qaecy.com/enum#GCP">Google Cloud Platform</a>
@@ -115,6 +201,12 @@ This ontology has the following classes and properties.</span>
       <a href="#Interface" title="https://dev.qaecy.com/enum#Interface">Interface</a>
    </li>
    <li>
+      <a href="#Jurisdiction" title="https://dev.qaecy.com/enum#Jurisdiction">Jurisdiction</a>
+   </li>
+   <li>
+      <a href="#LightingPlanDrawing" title="https://dev.qaecy.com/enum#LightingPlanDrawing">Lighting Plan Drawing</a>
+   </li>
+   <li>
       <a href="#LocalProvider" title="https://dev.qaecy.com/enum#LocalProvider">Local provider</a>
    </li>
    <li>
@@ -127,7 +219,8 @@ This ontology has the following classes and properties.</span>
       <a href="#Material" title="https://dev.qaecy.com/enum#Material">Material</a>
    </li>
    <li>
-      <a href="#MultimediaFileContent" title="https://dev.qaecy.com/enum#MultimediaFileContent">Multimedia File Content</a>
+      <a href="#MultimediaFileContent"
+         title="https://dev.qaecy.com/enum#MultimediaFileContent">Multimedia File Content</a>
    </li>
    <li>
       <a href="#ObjectId" title="https://dev.qaecy.com/enum#ObjectId">Object Id</a>
@@ -137,10 +230,20 @@ This ontology has the following classes and properties.</span>
          title="https://dev.qaecy.com/enum#OpeningElementInterface">Opening Element Interface</a>
    </li>
    <li>
+      <a href="#OperationsManualDocument"
+         title="https://dev.qaecy.com/enum#OperationsManualDocument">Operations &amp; Maintenance Manual</a>
+   </li>
+   <li>
       <a href="#Organization" title="https://dev.qaecy.com/enum#Organization">Organization</a>
    </li>
    <li>
-      <a href="#OtherContent" title="https://dev.qaecy.com/enum#OtherContent">Other content</a>
+      <a href="#OtherDocument" title="https://dev.qaecy.com/enum#OtherDocument">Other Document</a>
+   </li>
+   <li>
+      <a href="#OtherDrawing" title="https://dev.qaecy.com/enum#OtherDrawing">Other Drawing</a>
+   </li>
+   <li>
+      <a href="#OtherMetadataField" title="https://dev.qaecy.com/enum#OtherMetadataField">Other Metadata Field</a>
    </li>
    <li>
       <a href="#Person" title="https://dev.qaecy.com/enum#Person">Person</a>
@@ -149,32 +252,53 @@ This ontology has the following classes and properties.</span>
       <a href="#PlanningFileContent" title="https://dev.qaecy.com/enum#PlanningFileContent">Planning File Content</a>
    </li>
    <li>
+      <a href="#PlumbingLayoutDrawing"
+         title="https://dev.qaecy.com/enum#PlumbingLayoutDrawing">Plumbing Layout Drawing</a>
+   </li>
+   <li>
+      <a href="#PostCode" title="https://dev.qaecy.com/enum#PostCode">PostCode</a>
+   </li>
+   <li>
       <a href="#PresentationFileContent"
          title="https://dev.qaecy.com/enum#PresentationFileContent">Presentation File Content</a>
    </li>
    <li>
-      <a href="#Project" title="https://dev.qaecy.com/enum#Project">Project</a>
+      <a href="#ConstructionProject" title="https://dev.qaecy.com/enum#ConstructionProject">Project</a>
    </li>
    <li>
-      <a href="#Regulation" title="https://dev.qaecy.com/enum#Regulation">Regulation</a>
+      <a href="#ProjectPhase" title="https://dev.qaecy.com/enum#ProjectPhase">Project Phase</a>
    </li>
    <li>
-      <a href="#Report" title="https://dev.qaecy.com/enum#Report">Report</a>
+      <a href="#QualityControlDocument"
+         title="https://dev.qaecy.com/enum#QualityControlDocument">Quality Control Document</a>
+   </li>
+   <li>
+      <a href="#ReinforcementDrawing" title="https://dev.qaecy.com/enum#ReinforcementDrawing">Reinforcement Drawing</a>
    </li>
    <li>
       <a href="#Roof" title="https://dev.qaecy.com/enum#Roof">Roof</a>
    </li>
    <li>
-      <a href="#SafetyDocument" title="https://dev.qaecy.com/enum#SafetyDocument">Safety Document</a>
+      <a href="#Schedule" title="https://dev.qaecy.com/enum#Schedule">Schedule</a>
    </li>
    <li>
-      <a href="#Schedule" title="https://dev.qaecy.com/enum#Schedule">Schedule</a>
+      <a href="#ScheduleDocument" title="https://dev.qaecy.com/enum#ScheduleDocument">Schedule Document</a>
    </li>
    <li>
       <a href="#ScriptFileContent" title="https://dev.qaecy.com/enum#ScriptFileContent">Script File Content</a>
    </li>
    <li>
+      <a href="#SectionDrawing" title="https://dev.qaecy.com/enum#SectionDrawing">Section Drawing</a>
+   </li>
+   <li>
       <a href="#Site" title="https://dev.qaecy.com/enum#Site">Site</a>
+   </li>
+   <li>
+      <a href="#SiteAssessmentDocument"
+         title="https://dev.qaecy.com/enum#SiteAssessmentDocument">Site Assessment Document</a>
+   </li>
+   <li>
+      <a href="#SitePlanDrawing" title="https://dev.qaecy.com/enum#SitePlanDrawing">Site Plan Drawing</a>
    </li>
    <li>
       <a href="#SiteBuildingInterface"
@@ -195,9 +319,6 @@ This ontology has the following classes and properties.</span>
          title="https://dev.qaecy.com/enum#SpaceContainedElementInterface">Space/Contained element Interface</a>
    </li>
    <li>
-      <a href="#Specification" title="https://dev.qaecy.com/enum#Specification">Specification</a>
-   </li>
-   <li>
       <a href="#SpreadsheetFileContent"
          title="https://dev.qaecy.com/enum#SpreadsheetFileContent">Spreadsheet File Content</a>
    </li>
@@ -205,7 +326,7 @@ This ontology has the following classes and properties.</span>
       <a href="#Stair" title="https://dev.qaecy.com/enum#Stair">Stair</a>
    </li>
    <li>
-      <a href="#Standard" title="https://dev.qaecy.com/enum#Standard">Standard</a>
+      <a href="#State" title="https://dev.qaecy.com/enum#State">State</a>
    </li>
    <li>
       <a href="#Storey" title="https://dev.qaecy.com/enum#Storey">Storey</a>
@@ -218,7 +339,11 @@ This ontology has the following classes and properties.</span>
       <a href="#StoreySpaceInterface" title="https://dev.qaecy.com/enum#StoreySpaceInterface">Storey/Space Interface</a>
    </li>
    <li>
-      <a href="#Tender" title="https://dev.qaecy.com/enum#Tender">Tender</a>
+      <a href="#TechnicalSpecificationDocument"
+         title="https://dev.qaecy.com/enum#TechnicalSpecificationDocument">Technical Specification Document</a>
+   </li>
+   <li>
+      <a href="#TenderingDocument" title="https://dev.qaecy.com/enum#TenderingDocument">Tendering Document</a>
    </li>
    <li>
       <a href="#TextFileContent" title="https://dev.qaecy.com/enum#TextFileContent">Text File Content</a>
