--- a/ont/sections/overview-en.html
+++ b/ont/sections/overview-en.html
@@ -103,8 +103,13 @@ This ontology has the following classes and properties.</span>
       <a href="#about" title="https://dev.qaecy.com/ont#about">about</a>
    </li>
    <li>
-      <a href="#adjacentElement" title="https://dev.qaecy.com/ont#adjacentElement">
-         <span>adjacent element</span>
+      <a href="#activityHasEndDate" title="https://dev.qaecy.com/ont#activityHasEndDate">
+         <span>activity has end date</span>
+      </a>
+   </li>
+   <li>
+      <a href="#activityHasStartDate" title="https://dev.qaecy.com/ont#activityHasStartDate">
+         <span>activity has start date</span>
       </a>
    </li>
    <li>
@@ -113,6 +118,10 @@ This ontology has the following classes and properties.</span>
    <li>
       <a href="#alternativeRepresentation"
          title="https://dev.qaecy.com/ont#alternativeRepresentation">alternative representation</a>
+   </li>
+   <li>
+      <a href="#applicableContentCategories"
+         title="https://dev.qaecy.com/ont#applicableContentCategories">applicable content categories</a>
    </li>
    <li>
       <a href="#applicableObjectCategories"
@@ -124,40 +133,86 @@ This ontology has the following classes and properties.</span>
    </li>
    <li>
       <a href="#associatedWith" title="https://dev.qaecy.com/ont#associatedWith">
-         <span>assosiated with</span>
+         <span>associated with</span>
       </a>
    </li>
    <li>
-      <a href="#containsBuilding" title="https://dev.qaecy.com/ont#containsBuilding">
-         <span>contains buidling</span>
+      <a href="#buildingContainsStorey" title="https://dev.qaecy.com/ont#buildingContainsStorey">
+         <span>building contains storey</span>
       </a>
    </li>
    <li>
-      <a href="#containsElement" title="https://dev.qaecy.com/ont#containsElement">
-         <span>contains element</span>
+      <a href="#zoneContainsElement" title="https://dev.qaecy.com/ont#zoneContainsElement">
+         <span>building zone contains building element</span>
       </a>
    </li>
    <li>
       <a href="#containsFragment" title="https://dev.qaecy.com/ont#containsFragment">contains fragment</a>
    </li>
    <li>
-      <a href="#containsSpace" title="https://dev.qaecy.com/ont#containsSpace">
-         <span>contains space</span>
+      <a href="#contractHasEndDate" title="https://dev.qaecy.com/ont#contractHasEndDate">
+         <span>contract has end date</span>
       </a>
    </li>
    <li>
-      <a href="#containsStorey" title="https://dev.qaecy.com/ont#containsStorey">
-         <span>contains storey</span>
+      <a href="#contractHasSignatureDate"
+         title="https://dev.qaecy.com/ont#contractHasSignatureDate">
+         <span>contract has signature date</span>
       </a>
    </li>
    <li>
-      <a href="#endDate" title="https://dev.qaecy.com/ont#endDate">
-         <span>end date</span>
+      <a href="#contractHasStartDate" title="https://dev.qaecy.com/ont#contractHasStartDate">
+         <span>contract has start date</span>
       </a>
    </li>
    <li>
-      <a href="#hasAgent" title="https://dev.qaecy.com/ont#hasAgent">
-         <span>has agent</span>
+      <a href="#contractInvolvesAsset" title="https://dev.qaecy.com/ont#contractInvolvesAsset">
+         <span>contract involves asset</span>
+      </a>
+   </li>
+   <li>
+      <a href="#metadataReferencesFile" title="https://dev.qaecy.com/ont#metadataReferencesFile">
+         <span>design metadata references file</span>
+      </a>
+   </li>
+   <li>
+      <a href="#drawingAboutProject" title="https://dev.qaecy.com/ont#drawingAboutProject">
+         <span>drawing about construction project</span>
+      </a>
+   </li>
+   <li>
+      <a href="#drawingApprovedBy" title="https://dev.qaecy.com/ont#drawingApprovedBy">
+         <span>drawing approved by</span>
+      </a>
+   </li>
+   <li>
+      <a href="#drawingCreatedBy" title="https://dev.qaecy.com/ont#drawingCreatedBy">
+         <span>drawing created by</span>
+      </a>
+   </li>
+   <li>
+      <a href="#drawingHasApprovalDate" title="https://dev.qaecy.com/ont#drawingHasApprovalDate">
+         <span>drawing has approval date</span>
+      </a>
+   </li>
+   <li>
+      <a href="#drawingHasCreationDate" title="https://dev.qaecy.com/ont#drawingHasCreationDate">
+         <span>drawing has creation date</span>
+      </a>
+   </li>
+   <li>
+      <a href="#sheetContainsDrawing" title="https://dev.qaecy.com/ont#sheetContainsDrawing">
+         <span>drawing sheet contains drawing entity</span>
+      </a>
+   </li>
+   <li>
+      <a href="#elementHasMaterial" title="https://dev.qaecy.com/ont#elementHasMaterial">
+         <span>element has material</span>
+      </a>
+   </li>
+   <li>
+      <a href="#hasActivityAgent" title="https://dev.qaecy.com/ont#hasActivityAgent">
+         <span>has activity agent</span>
       </a>
    </li>
    <li>
@@ -167,8 +222,23 @@ This ontology has the following classes and properties.</span>
       <a href="#hasContentCategory" title="https://dev.qaecy.com/ont#hasContentCategory">has content category</a>
    </li>
    <li>
-      <a href="#hasElement" title="https://dev.qaecy.com/ont#hasElement">
-         <span>has element</span>
+      <a href="#hasContractCondition" title="https://dev.qaecy.com/ont#hasContractCondition">
+         <span>has contract condition</span>
+      </a>
+   </li>
+   <li>
+      <a href="#hasContractRole" title="https://dev.qaecy.com/ont#hasContractRole">
+         <span>has contract role</span>
+      </a>
+   </li>
+   <li>
+      <a href="#hasDesignMetadata" title="https://dev.qaecy.com/ont#hasDesignMetadata">
+         <span>has design metadata</span>
+      </a>
+   </li>
+   <li>
+      <a href="#hasDuration" title="https://dev.qaecy.com/ont#hasDuration">
+         <span>has duration</span>
       </a>
    </li>
    <li>
@@ -193,8 +263,17 @@ This ontology has the following classes and properties.</span>
       <a href="#hasFileLocation" title="https://dev.qaecy.com/ont#hasFileLocation">has file location</a>
    </li>
    <li>
-      <a href="#hasMaterial" title="https://dev.qaecy.com/ont#hasMaterial">
-         <span>has material</span>
+      <a href="#hasFoundingMention" title="https://dev.qaecy.com/ont#hasFoundingMention">has founding mention</a>
+   </li>
+   <li>
+      <a href="#hasGoverningJurisdiction"
+         title="https://dev.qaecy.com/ont#hasGoverningJurisdiction">
+         <span>has governing jurisdiction</span>
+      </a>
+   </li>
+   <li>
+      <a href="#hasLocation" title="https://dev.qaecy.com/ont#hasLocation">
+         <span>has location</span>
       </a>
    </li>
    <li>
@@ -209,12 +288,52 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
+      <a href="#includesActivity" title="https://dev.qaecy.com/ont#includesActivity">
+         <span>includes activity</span>
+      </a>
+   </li>
+   <li>
+      <a href="#includesBuildingEntity" title="https://dev.qaecy.com/ont#includesBuildingEntity">
+         <span>includes building entity</span>
+      </a>
+   </li>
+   <li>
       <a href="#interfaceOf" title="https://dev.qaecy.com/ont#interfaceOf">
          <span>interface of</span>
       </a>
    </li>
    <li>
+      <a href="#involvedInContract" title="https://dev.qaecy.com/ont#involvedInContract">
+         <span>involved in contract</span>
+      </a>
+   </li>
+   <li>
+      <a href="#involvesBuildingEntity" title="https://dev.qaecy.com/ont#involvesBuildingEntity">
+         <span>involves building entity</span>
+      </a>
+   </li>
+   <li>
+      <a href="#involvesCost" title="https://dev.qaecy.com/ont#involvesCost">
+         <span>involves cost</span>
+      </a>
+   </li>
+   <li>
+      <a href="#involvesDiscipline" title="https://dev.qaecy.com/ont#involvesDiscipline">
+         <span>involves discipline</span>
+      </a>
+   </li>
+   <li>
       <a href="#mentions" title="https://dev.qaecy.com/ont#mentions">mentions</a>
+   </li>
+   <li>
+      <a href="#obligationHasEndDate" title="https://dev.qaecy.com/ont#obligationHasEndDate">
+         <span>obligation has end date</span>
+      </a>
+   </li>
+   <li>
+      <a href="#obligationHasStartDate" title="https://dev.qaecy.com/ont#obligationHasStartDate">
+         <span>obligation has start date</span>
+      </a>
    </li>
    <li>
       <a href="#parentFragment" title="https://dev.qaecy.com/ont#parentFragment">parent fragment</a>
@@ -222,6 +341,16 @@ This ontology has the following classes and properties.</span>
    <li>
       <a href="#precedesActivity" title="https://dev.qaecy.com/ont#precedesActivity">
          <span>precedes activity</span>
+      </a>
+   </li>
+   <li>
+      <a href="#projectHasPhase" title="https://dev.qaecy.com/ont#projectHasPhase">
+         <span>project has phase</span>
+      </a>
+   </li>
+   <li>
+      <a href="#projectHasSchedule" title="https://dev.qaecy.com/ont#projectHasSchedule">
+         <span>project has schedule</span>
       </a>
    </li>
    <li>
@@ -260,13 +389,35 @@ This ontology has the following classes and properties.</span>
       <a href="#selectorSubject" title="https://dev.qaecy.com/ont#selectorSubject">selector subject</a>
    </li>
    <li>
-      <a href="#startDate" title="https://dev.qaecy.com/ont#startDate">
-         <span>start date</span>
+      <a href="#siteContainsBuilding" title="https://dev.qaecy.com/ont#siteContainsBuilding">
+         <span>site contains building</span>
+      </a>
+   </li>
+   <li>
+      <a href="#zoneContainsSpace" title="https://dev.qaecy.com/ont#zoneContainsSpace">
+         <span>zone contains space</span>
+      </a>
+   </li>
+   <li>
+      <a href="#zoneHasAdjacentElement"
+         title="https://dev.qaecy.com/ont#zoneHasAdjacentElement">
+         <span>zone has adjacent element</span>
+      </a>
+   </li>
+   <li>
+      <a href="#zoneHasElement" title="https://dev.qaecy.com/ont#zoneHasElement">
+         <span>zone has element</span>
       </a>
    </li>
 </ul><h4>Data Properties</h4><ul xmlns:widoco="https://w3id.org/widoco/vocab#"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     class="hlist">
+   <li>
+      <a href="#classificationPrompt" title="https://dev.qaecy.com/ont#classificationPrompt">classification prompt</a>
+   </li>
+   <li>
+      <a href="#confidence" title="https://dev.qaecy.com/ont#confidence">confidence</a>
+   </li>
    <li>
       <a href="#dateCreated" title="https://dev.qaecy.com/ont#dateCreated">date created</a>
    </li>
@@ -326,6 +477,9 @@ This ontology has the following classes and properties.</span>
    </li>
    <li>
       <a href="#openFormat" title="https://dev.qaecy.com/ont#openFormat">open format</a>
+   </li>
+   <li>
+      <a href="#reasoning" title="https://dev.qaecy.com/ont#reasoning">reasoning</a>
    </li>
    <li>
       <a href="#regex" title="https://dev.qaecy.com/ont#regex">regex</a>
