Fixed bug in qcy:suffix domain

--- a/ont/sections/overview-en.html
+++ b/ont/sections/overview-en.html
@@ -150,6 +150,12 @@ This ontology has the following classes and properties.</span>
       <a href="#containsFragment" title="https://dev.qaecy.com/ont#containsFragment">contains fragment</a>
    </li>
    <li>
+      <a href="#contractGovernedByJurisdiction"
+         title="https://dev.qaecy.com/ont#contractGovernedByJurisdiction">
+         <span>contract governed by jurisdiction</span>
+      </a>
+   </li>
+   <li>
       <a href="#contractHasEndDate" title="https://dev.qaecy.com/ont#contractHasEndDate">
          <span>contract has end date</span>
       </a>
@@ -166,8 +172,25 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
-      <a href="#contractInvolvesAsset" title="https://dev.qaecy.com/ont#contractInvolvesAsset">
-         <span>contract involves asset</span>
+      <a href="#contractInvolvesParty" title="https://dev.qaecy.com/ont#contractInvolvesParty">
+         <span>contract involves party</span>
+      </a>
+   </li>
+   <li>
+      <a href="#contractMentionsBuiltAsset"
+         title="https://dev.qaecy.com/ont#contractMentionsBuiltAsset">
+         <span>contract mentions built asset</span>
+      </a>
+   </li>
+   <li>
+      <a href="#obligationHasCondition" title="https://dev.qaecy.com/ont#obligationHasCondition">
+         <span>contract obligation has contract condition</span>
+      </a>
+   </li>
+   <li>
+      <a href="#contractStatesObligation"
+         title="https://dev.qaecy.com/ont#contractStatesObligation">
+         <span>contract states obligation</span>
       </a>
    </li>
    <li>
@@ -222,11 +245,6 @@ This ontology has the following classes and properties.</span>
       <a href="#hasContentCategory" title="https://dev.qaecy.com/ont#hasContentCategory">has content category</a>
    </li>
    <li>
-      <a href="#hasContractCondition" title="https://dev.qaecy.com/ont#hasContractCondition">
-         <span>has contract condition</span>
-      </a>
-   </li>
-   <li>
       <a href="#hasContractRole" title="https://dev.qaecy.com/ont#hasContractRole">
          <span>has contract role</span>
       </a>
@@ -266,12 +284,6 @@ This ontology has the following classes and properties.</span>
       <a href="#hasFoundingMention" title="https://dev.qaecy.com/ont#hasFoundingMention">has founding mention</a>
    </li>
    <li>
-      <a href="#hasGoverningJurisdiction"
-         title="https://dev.qaecy.com/ont#hasGoverningJurisdiction">
-         <span>has governing jurisdiction</span>
-      </a>
-   </li>
-   <li>
       <a href="#hasLocation" title="https://dev.qaecy.com/ont#hasLocation">
          <span>has location</span>
       </a>
@@ -303,11 +315,6 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
-      <a href="#involvedInContract" title="https://dev.qaecy.com/ont#involvedInContract">
-         <span>involved in contract</span>
-      </a>
-   </li>
-   <li>
       <a href="#involvesBuildingEntity" title="https://dev.qaecy.com/ont#involvesBuildingEntity">
          <span>involves building entity</span>
       </a>
@@ -328,6 +335,12 @@ This ontology has the following classes and properties.</span>
    <li>
       <a href="#obligationHasEndDate" title="https://dev.qaecy.com/ont#obligationHasEndDate">
          <span>obligation has end date</span>
+      </a>
+   </li>
+   <li>
+      <a href="#obligationHasResponsibleParty"
+         title="https://dev.qaecy.com/ont#obligationHasResponsibleParty">
+         <span>obligation has responsible party</span>
       </a>
    </li>
    <li>
@@ -381,6 +394,11 @@ This ontology has the following classes and properties.</span>
    </li>
    <li>
       <a href="#resolvesTo" title="https://dev.qaecy.com/ont#resolvesTo">resolves to</a>
+   </li>
+   <li>
+      <a href="#roleInContract" title="https://dev.qaecy.com/ont#roleInContract">
+         <span>role in contract</span>
+      </a>
    </li>
    <li>
       <a href="#selectorObject" title="https://dev.qaecy.com/ont#selectorObject">selector object</a>
@@ -492,6 +510,9 @@ This ontology has the following classes and properties.</span>
    </li>
    <li>
       <a href="#sizeBytes" title="https://dev.qaecy.com/ont#sizeBytes">size bytes</a>
+   </li>
+   <li>
+      <a href="#subject" title="https://dev.qaecy.com/ont#subject">subject</a>
    </li>
    <li>
       <a href="#tableGrid" title="https://dev.qaecy.com/ont#tableGrid">table grid</a>
