Fixed bug in qcy:suffix domain

--- a/ont/sections/crossref-en.html
+++ b/ont/sections/crossref-en.html
@@ -3094,7 +3094,7 @@ This section provides details for each class and property defined by The QAECY O
      has range
     </dt>
     <dd>
-     <a href="http://www.w3.org/2001/XMLSchema#integer" target="_blank" title="http://www.w3.org/2001/XMLSchema#integer">integer</a>
+     <a href="http://www.w3.org/2001/XMLSchema#string" target="_blank" title="http://www.w3.org/2001/XMLSchema#string">string</a>
     </dd>
     <dt>
      is also defined as
